Incorporando clase Pelota(vacia)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	</canvas>
 	
 	
-	<script src="./principal.js"></script>
+	<script src="./js/Pelota.js"></script>
+	<script src="./js/principal.js"></script>
 
 
 </body>
