--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	
 	
 	<script src="./js/Pelota.js"></script>
+	<script src="./js/Paleta.js"></script>
 	<script src="./js/principal.js"></script>
 
 
