Avances en la integración de la clase Bloque(obstaculo) y su dibujado en pantalla + eliminación de algunos mensajes en la consola

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	
 	<script src="./js/Pelota.js"></script>
 	<script src="./js/Paleta.js"></script>
+	<script src="./js/Bloque.js"></script>
 	<script src="./js/principal.js"></script>
 
 
